css/index.scss
---
---

$primary-font: 'Roboto Mono';
$clock-font: 'Roboto';
$type-font: $clock-font;
$monospace: $primary-font;

body {
  color: #ffffff;
  font-size: 2.1rem;
  transition: color 0.2s;
  transition: background-color 1s;
  font-family: $primary-font;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 300;
}

ul {
  list-style-type: disc;
}

input {
  color: #555555;
  font-family: $monospace;
}

.container {
  margin-top: 15%;
  margin-bottom: 2rem;
}

.main {
  margin-bottom: 5rem;
}

.material-icons {
  font-size: 250%;
}

.status {
  border-left: 2px solid;
  transition: border-left-color 0.2s;
  padding-left: 2rem;
  margin-bottom: 3rem;
}

.hidden {
  display: none;
}

.invisible {
  visibility: hidden;
}

#footer {
  opacity: 0.7;
}

#submit {
  font-family: $monospace;
}

#clock {
  font-family: $clock-font;
  font-weight: 500;
  font-size: 10rem;
  padding: 0;
  margin: 0;
}

#type {
  text-transform: uppercase;
  font-family: $type-font;
  font-weight: 300;
  font-size: 5rem;
}

#cog {
  border-color: #616161 !important;
  color: #424242;
}

/* The following styles have been lifted from Materialize CSS, with some changes.
---------------------------------------------------------------------------------*/

.btn {
  border: none;
  border-radius: 3px;
  display: inline-block;
  height: 5rem;
  line-height: 5rem;
  outline: 0;
  padding: 0 2rem;
  text-transform: uppercase;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  text-decoration: none;
  text-align: center;
  letter-spacing: .5px;
  transition: .2s ease-out;
  cursor: pointer;
  i {
      line-height: inherit;
  }
  &:hover {
      background-color: rgba(255, 255, 255, 0.3);
  }
  &:focus {
      background-color: rgba(0, 0, 0, 0.1);
  }
}

.btn-colored {
  background-color: rgb(66, 66, 66);
  &:hover {
    background-color: rgb(100, 100, 100);
  }
  &:focus {
    background-color: rgb(30, 30, 30);
  }
}

.btn-shadow {
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.75);
}

/* Cards */

.card {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  position: relative;
  margin: 0 0 4rem 0;
  background-color: #ffffff;
  color: #424242;
  transition: box-shadow .25s;
  border-radius: 3px;
}

.card .card-title {
  font-size: 24px;
  font-weight: 300;
}

.card .card-content {
  padding: 20px;
  border-radius: 0 0 2px 2px;
}

.card .card-content p {
  input[type="number"] {
    background-color: rgba(0, 0, 0, 0);
    border: 0;
    border-radius: 0px;
    outline: 0;
    margin-bottom: 0.5rem;
    width: 9rem;
    display: inline-block;
    border-bottom: 2px solid #555555;
  }
  text-align: justify;
  margin: 0;
  color: inherit;
}

.card .card-content .card-title {
  line-height: 48px;
}

.card .card-action {
  border-top: 1px solid rgba(160, 160, 160, 0.2);
  padding: 20px;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
  color: #ffab40;
  margin-right: 20px;
  transition: color .3s ease;
  text-transform: uppercase;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
  color: #ffd8a6;
}

/* Switches */

.switch,
.switch * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -ms-user-select: none;
}

.switch label {
  cursor: pointer;
}

.switch label input[type=checkbox] {
  opacity: 0;
  width: 0;
  height: 0;
}

.switch label input[type=checkbox]:checked + .lever {
  background-color: #84c7c1;
}

.switch label input[type=checkbox]:checked + .lever:after {
  background-color: #26a69a;
}

.switch label .lever {
  content: "";
  display: inline-block;
  position: relative;
  width: 40px;
  height: 15px;
  background-color: #818181;
  border-radius: 15px;
  margin-right: 10px;
  transition: background 0.3s ease;
  vertical-align: middle;
  margin: 0 16px;
}

.switch label .lever:after {
  content: "";
  position: absolute;
  display: inline-block;
  width: 21px;
  height: 21px;
  background-color: #F1F1F1;
  border-radius: 21px;
  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
  left: -5px;
  top: -3px;
  transition: left 0.3s ease, background .3s ease, box-shadow 0.1s ease;
}

input[type=checkbox]:checked:not(:disabled) ~ .lever:active:after {
  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(38, 166, 154, 0.1);
}

input[type=checkbox]:not(:disabled) ~ .lever:active:after {
  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 0, 0, 0.08);
}

.switch label input[type=checkbox]:checked + .lever:after {
  left: 24px;
}

.switch input[type=checkbox][disabled] + .lever {
  cursor: default;
}

.switch label input[type=checkbox][disabled] + .lever:after,
.switch label input[type=checkbox][disabled]:checked + .lever:after {
  background-color: #BDBDBD;
}

/* A .switch-icon is colored when enabled, uncoloured when disabled. */

.switch-icon label {
  -webkit-tap-highlight-color: transparent;
  margin: 0;
  padding: 0;
  cursor: pointer;
  display: inline-block;
}

.switch-icon label input[type=checkbox] {
  opacity: 0;
  width: 0;
  height: 0;
  margin: 0;
  padding: 0;
}

.switch-icon label input[type=checkbox]:checked ~ i.alerts {
  color: #26a69a;
}

.switch-icon label input[type=checkbox]:checked ~ i.volume:before {
  content: "volume_off";
}

.switch-icon label input[type=checkbox]:not(:checked) ~ i.volume:before {
  content: "volume_up";
  color: #26a69a;
}

